--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
