FEAT: server.js and index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": " env-cmd -f .env  node src/server.js --watch --no-daemon --node-args=\"-r esm\"",
+    "start": " env-cmd -f .env pm2 start src/server.js --watch --no-daemon ",
     "test:e2e": "env-cmd -f .env.test jest --config ./jest-e2e.json --runInBand",
     "test:unit": "env-cmd -f .env.test jest  --config ./jest-unit.json --runInBand ",
     "test:integ": "env-cmd -f .env.test jest --config ./jest-inte.json --runInBand"
@@ -16,8 +16,11 @@
     "@prisma/client": "^5.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "pm2": "^5.3.0",
     "prisma": "^5.3.1"
   },
   "devDependencies": {
