--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "joi": "^17.10.1",
     "pm2": "^5.3.0",
     "prisma": "^5.3.1"
   },
