--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "joi": "^17.10.1",
     "pm2": "^5.3.0",
-    "prisma": "^5.3.1"
+    "prisma": "^5.3.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "jest": "^29.7.0"
